--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
     "yt-dlp>=2024.0.0",
+    "ollama>=0.1.0",
 ]
 
 [project.scripts]
